[package]
name = "appfinder"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tricked-dev <tricked@tricked.dev>"]
description = "Find the location to applications on Linux, Windows and MacOS"
categories = ["filesystem"]
keywords = ["windows", "binaryfinder", "find-application", "locate-executable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os="linux")'.dependencies]
freedesktop-desktop-entry = "0.5.0"
